<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rmatejczuk.battleshipmobilegame.MainMenuActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/game_Title"
        android:textColor="@color/textColor"
        android:textSize="45dp" />

    <Button
        android:id="@+id/play_battle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title"
        android:layout_alignRight="@+id/title"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="onPlayBattle"
        android:text="@string/play_battle"
        android:textSize="20dp" />

    <Button
        android:id="@+id/ranked_battle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title"
        android:layout_alignRight="@+id/title"
        android:layout_below="@+id/play_battle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="onRankedBattle"
        android:text="@string/ranked_battle"
        android:textSize="20dp" />

    <Button
        android:id="@+id/stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title"
        android:layout_alignRight="@+id/title"
        android:layout_below="@+id/ranked_battle"
        android:layout_marginTop="30dp"
        android:onClick="onStats"
        android:text="@string/stats"
        android:textSize="20dp" />

    <Button
        android:id="@+id/credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title"
        android:layout_alignRight="@+id/title"
        android:layout_below="@+id/stats"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="onCredits"
        android:text="@string/credits"
        android:textSize="20dp" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/credits"
        android:layout_marginTop="15dp"
        android:onClick="onLogin"
        android:text="@string/login"
        android:textSize="20dp" />
</RelativeLayout>
