<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rmatejczuk.battleshipmobilegame.PlayBattleActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/game_Title"
        android:textColor="@color/textColor"
        android:textSize="45dp" />

    <Button
        android:id="@+id/play_ai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title"
        android:layout_alignRight="@+id/title"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="onPlayAI"
        android:text="@string/play_ai"
        android:textSize="20dp" />

    <Button
        android:id="@+id/play_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title"
        android:layout_alignRight="@+id/title"
        android:layout_below="@+id/play_ai"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="onPlayLocal"
        android:text="@string/play_local"
        android:textSize="18dp" />

    <Button
        android:id="@+id/online_battle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title"
        android:layout_alignRight="@+id/title"
        android:layout_below="@+id/play_local"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="onPlayOnline"
        android:text="@string/online_battle"
        android:textSize="20dp" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title"
        android:layout_alignRight="@+id/title"
        android:layout_below="@+id/online_battle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="onBack"
        android:text="@string/back"
        android:textSize="20dp" />

</RelativeLayout>
