<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="8dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rmatejczuk.battleshipmobilegame.PrepareShipsActivity">

    <TextView
        android:id="@+id/game_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/game_type"
        android:textColor="@color/textColor"
        android:textSize="30sp"
        android:layout_alignLeft="@+id/rotate"/>

    <Button
        android:id="@+id/fight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="onFight"
        android:text="@string/fight" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/fight"
        android:layout_toLeftOf="@+id/fight"
        android:layout_toStartOf="@+id/fight"
        android:onClick="onBack"
        android:text="@string/back" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/fight"
        android:layout_alignLeft="@+id/fight"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@+id/fight"
        android:layout_alignTop="@+id/fight"
        android:onClick="onNext"
        android:text="@string/next" />

    <com.rmatejczuk.battleshipmobilegame.DrawView
        android:id="@+id/DrawView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/back" />

    <Button
        android:id="@+id/rotate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/back"
        android:layout_alignEnd="@+id/fight"
        android:layout_alignLeft="@+id/back"
        android:layout_alignRight="@+id/fight"
        android:layout_alignStart="@+id/back"
        android:onClick="onRotate"
        android:text="@string/rotate" />
</RelativeLayout>
